feat(products): enhance ProductsViewModel with loading and searching functionality
- Added ObservableCollection for managing product data in ProductsViewModel
- Implemented LoadProducts method to initialize sample products
- Introduced SearchProducts method for filtering products based on user input
- Updated ProductsPage to utilize ProductsViewModel for data binding
- Integrated search functionality in ShellPage for seamless user experience

These enhancements improve product management capabilities and user interaction within the application.

--- a/StormPC/StormPC/Views/Shell/ShellPage.xaml
+++ b/StormPC/StormPC/Views/Shell/ShellPage.xaml
@@ -15,7 +15,7 @@
               Height="{Binding ElementName=NavigationViewControl, Path=CompactPaneLength}"
               IsHitTestVisible="True"
               VerticalAlignment="Top">
-            <Image Source="/Assets/WindowIcon.ico"
+            <Image Source="/Assets/img/icon/WindowIcon-512.ico"
                    HorizontalAlignment="Left"
                    Width="16"
                    Height="16" />
@@ -33,6 +33,16 @@
                         IsSettingsVisible="True"
                         PaneTitle="Storm PC"
                         DisplayModeChanged="NavigationViewControl_DisplayModeChanged">
+            
+            <NavigationView.AutoSuggestBox>
+                <AutoSuggestBox x:Name="NavSearchBox"
+                               QueryIcon="Find"
+                               PlaceholderText="Tìm kiếm..."
+                               TextChanged="NavSearchBox_TextChanged"
+                               QuerySubmitted="NavSearchBox_QuerySubmitted"
+                               SuggestionChosen="NavSearchBox_SuggestionChosen"/>
+            </NavigationView.AutoSuggestBox>
+
             <NavigationView.MenuItems>
                 <!-- Dashboard -->
                 <NavigationViewItem>
