--- a/StormPC/StormPC/Views/Login/FirstTimeWindow.xaml
+++ b/StormPC/StormPC/Views/Login/FirstTimeWindow.xaml
@@ -10,11 +10,19 @@
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Margin="0,0,0,20">
+        <!-- Logo -->
+        <Image Grid.Row="0" 
+               Source="/Assets/img/logo/logo-512x512.png"
+               Width="120" 
+               Height="120"
+               Margin="0,0,0,10"/>
+
+        <StackPanel Grid.Row="1" Margin="0,0,0,20">
             <TextBlock Text="Welcome to StormPC"
                      FontSize="24"
                      FontWeight="Bold"
@@ -25,7 +33,7 @@
                      HorizontalAlignment="Center"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Margin="0,20">
+        <StackPanel Grid.Row="2" Margin="0,20">
             <TextBlock Text="Username" Margin="0,0,0,5"/>
             <winui:TextBox x:Name="UsernameTextBox" 
                      Text="{x:Bind ViewModel.Username, Mode=TwoWay}"
@@ -48,7 +56,7 @@
                       Margin="0,10"/>
         </StackPanel>
 
-        <Button Grid.Row="2"
+        <Button Grid.Row="3"
                 Content="Create Admin Account"
                 Padding="15,10"
                 HorizontalAlignment="Center"
