--- a/StormPC/StormPC/Views/Login/LoginWindow.xaml
+++ b/StormPC/StormPC/Views/Login/LoginWindow.xaml
@@ -10,18 +10,26 @@
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0"
+        <!-- Logo -->
+        <Image Grid.Row="0" 
+               Source="/Assets/img/logo/logo-512x512.png"
+               Width="120" 
+               Height="120"
+               Margin="0,0,0,10"/>
+
+        <TextBlock Grid.Row="1"
                  Text="StormPC Login"
                  FontSize="24"
                  FontWeight="Bold"
                  HorizontalAlignment="Center"
                  Margin="0,0,0,30"/>
 
-        <StackPanel Grid.Row="1" Margin="0,20">
+        <StackPanel Grid.Row="2" Margin="0,20">
             <TextBlock Text="Username" Margin="0,0,0,5"/>
             <winui:TextBox x:Name="UsernameTextBox" 
                      Text="{x:Bind ViewModel.Username, Mode=TwoWay}"
@@ -39,7 +47,7 @@
                       Margin="0,10"/>
         </StackPanel>
 
-        <Button Grid.Row="2"
+        <Button Grid.Row="3"
                 Content="Login"
                 Padding="30,10"
                 HorizontalAlignment="Center"
