--- a/StormPC/StormPC/App.xaml
+++ b/StormPC/StormPC/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application
     x:Class="StormPC.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:helpers="using:StormPC.Core.Helpers">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -10,6 +11,8 @@
                 <ResourceDictionary Source="/Styles/Thickness.xaml" />
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <x:String x:Key="CurrencyFormatConverter">{0:N0}</x:String>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
