feat(database): add IsDeleted field to multiple tables and update field properties

--- a/StormPC/StormPC/Views/Shell/ShellPage.xaml
+++ b/StormPC/StormPC/Views/Shell/ShellPage.xaml
@@ -37,7 +37,7 @@
             <NavigationView.AutoSuggestBox>
                 <AutoSuggestBox x:Name="NavSearchBox"
                                QueryIcon="Find"
-                               PlaceholderText="Tìm kiếm..."/>
+                               PlaceholderText="Tìm kiếm nâng cao..."/>
             </NavigationView.AutoSuggestBox>
 
             <NavigationView.MenuItems>
