--- a/StormPC/StormPC/Views/BaseData/CategoriesPage.xaml
+++ b/StormPC/StormPC/Views/BaseData/CategoriesPage.xaml
@@ -1,13 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Page
     x:Class="StormPC.Views.BaseData.CategoriesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:dtos="using:StormPC.Core.Models.Products.Dtos"
+    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+    Loaded="Page_Loaded"
     mc:Ignorable="d">
 
     <Grid Margin="20">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -16,8 +21,69 @@
                    Style="{ThemeResource TitleTextBlockStyle}" 
                    Grid.Row="0"/>
 
-        <Grid Grid.Row="1" Margin="0,20,0,0">
-            <!-- Content will be added here -->
+        <Grid Grid.Row="1" Margin="0,20,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <AutoSuggestBox PlaceholderText="Tìm kiếm loại sản phẩm..."
+                          QueryIcon="Find"
+                          Text="{x:Bind ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                          Width="300"
+                          HorizontalAlignment="Left"/>
+
+            <Button Content="Thêm mới"
+                    Grid.Column="1"
+                    Style="{StaticResource AccentButtonStyle}"/>
+        </Grid>
+
+        <Grid Grid.Row="2">
+            <controls:DataGrid ItemsSource="{x:Bind ViewModel.Categories, Mode=OneWay}"
+                      AutoGenerateColumns="False"
+                      IsReadOnly="True"
+                      GridLinesVisibility="Horizontal"
+                      HorizontalGridLinesBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                      SelectionMode="Single">
+                <controls:DataGrid.Columns>
+                    <controls:DataGridTextColumn Header="ID" 
+                                      Binding="{Binding CategoryID}" 
+                                      Width="80"/>
+                    <controls:DataGridTextColumn Header="Loại sản phẩm" 
+                                      Binding="{Binding CategoryName}" 
+                                      Width="200"/>
+                    <controls:DataGridTextColumn Header="Thông tin" 
+                                      Binding="{Binding Description}" 
+                                      Width="*"/>
+                    <controls:DataGridTextColumn Header="Số lượng SP" 
+                                      Binding="{Binding ProductCount}" 
+                                      Width="120"/>
+                    <controls:DataGridTextColumn Header="Ngày tạo" 
+                                      Binding="{Binding FormattedCreatedAt}" 
+                                      Width="150"/>
+                    <controls:DataGridTextColumn Header="Cập nhật" 
+                                      Binding="{Binding FormattedUpdatedAt}" 
+                                      Width="150"/>
+                    <controls:DataGridTemplateColumn Header="Thao tác" Width="120">
+                        <controls:DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate x:DataType="dtos:CategoryDisplayDto">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <Button Content="&#xE70F;"
+                                            FontFamily="Segoe MDL2 Assets"
+                                            Style="{StaticResource AccentButtonStyle}"/>
+                                    <Button Content="&#xE74D;"
+                                            FontFamily="Segoe MDL2 Assets"
+                                            Style="{StaticResource DangerButtonStyle}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </controls:DataGridTemplateColumn.CellTemplate>
+                    </controls:DataGridTemplateColumn>
+                </controls:DataGrid.Columns>
+            </controls:DataGrid>
+
+            <ProgressRing IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}"
+                         Width="50" 
+                         Height="50"/>
         </Grid>
     </Grid>
 </Page> 
