--- a/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
+++ b/StormPC/StormPC/Views/BaseData/ProductsPage.xaml
@@ -381,7 +381,7 @@
                                         <TextBlock Grid.Row="4" 
                                                  Grid.Column="1"
                                                  Foreground="White">
-                                            <Run Text="{Binding LaptopSpecs.Count}"/>
+                                            <Run Text="{Binding OptionsCount}"/>
                                             <Run Text=" phiên bản"/>
                                         </TextBlock>
 
