--- a/StormPC/StormPC/Views/Login/LoginWindow.xaml
+++ b/StormPC/StormPC/Views/Login/LoginWindow.xaml
@@ -56,6 +56,7 @@
             <Grid>
                 <winui:PasswordBox x:Name="PasswordBox"
                             Password="{x:Bind ViewModel.Password, Mode=TwoWay}"
+                            PasswordRevealMode="Hidden"
                             Margin="0,0,0,15"
                             Padding="5"/>
                 <ToggleButton x:Name="ShowPasswordButton"
