--- a/StormPC/StormPC/Views/Login/LoginWindow.xaml
+++ b/StormPC/StormPC/Views/Login/LoginWindow.xaml
@@ -74,6 +74,11 @@
                      Margin="0,0,0,15"
                      IsChecked="{x:Bind ViewModel.RememberMe, Mode=TwoWay}"/>
 
+            <TextBlock Text="Khôi phục tài khoản bằng backup key"
+                      Foreground="{ThemeResource SystemAccentColor}"
+                      Tapped="OnRecoverAccountTapped"
+                      Margin="0,0,0,15"/>
+
             <TextBlock Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
                       Foreground="Red"
                       TextWrapping="Wrap"
@@ -85,5 +90,25 @@
                 Style="{StaticResource AccentButtonStyle}"
                 HorizontalAlignment="Center"
                 Click="OnLoginClick"/>
+
+        <winui:ContentDialog x:Name="RecoverAccountDialog"
+                      Title="Recover Account"
+                      PrimaryButtonText="Recover"
+                      SecondaryButtonText="Cancel"
+                      DefaultButton="Secondary"
+                      IsPrimaryButtonEnabled="True"
+                      IsSecondaryButtonEnabled="True"
+                      PrimaryButtonClick="OnRecoverAccountConfirm"
+                      SecondaryButtonClick="OnRecoverAccountCancel">
+            <StackPanel>
+                <TextBlock Text="Please enter your backup key to recover your account."
+                         TextWrapping="Wrap"
+                         Margin="0,0,0,10"/>
+                <TextBox x:Name="BackupKeyTextBox"
+                         PlaceholderText="Enter backup key"
+                         TextWrapping="Wrap"
+                         Height="100"/>
+            </StackPanel>
+        </winui:ContentDialog>
     </Grid>
 </Window> 
